// Original file: src/proto/room.proto


export interface Member {
  'roomId'?: (string);
  'userId'?: (string);
  'role'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'deletedAt'?: (string);
}

export interface Member__Output {
  'roomId'?: (string);
  'userId'?: (string);
  'role'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
  'deletedAt'?: (string);
}
